# Distributed-Nano-DB

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  chaos_harness.py  cluster.sh  verify_failover_fix.py
.github/workflows/: ci.yml
benchmarks/: benchmark_recall.cpp  benchmark_throughput.cpp  cluster_benchmark_results.json  compare_against_competitors.py  requirements.txt  tail_latency_analysis.py
cluster/: cluster_config.hpp  coordinator_main.cpp  hash_ring.hpp  id_map_store.hpp  routing.hpp  shard_node_main.cpp  shard_service_impl.hpp
deploy/: cluster.docker.json  cluster.local.json  docker-compose.cluster.yml
docs/: INTERNALS.md
include/common/: types.hpp
include/core/: distance.hpp  hnsw.hpp  node.hpp
include/index/: hnsw.hpp  quantizer.hpp
proto/: nanodb_cluster.proto
scripts/: demo_chaos.py
src/: python_bindings.cpp
src/index/: distance.cpp
tests/: CMakeLists.txt  test_cluster_config_race.cpp  test_distance.cpp  test_hash_ring.cpp  test_hnsw.cpp  test_id_map_store.cpp  test_persistence.cpp  test_routing.cpp
